Release Notes for Cppcheck 2.16

New checks:
-

Improved checking:
-

GUI:
-

Changed interface:
-

Deprecations:
- The previously deprecated support for Python 2.7 has been removed. please use Python 3 instead.
-

Other:
- "missingInclude" is no longer implicitly enabled with "information" - you need to enable it explicitly now.
-